# rosbag_viewer

./: .gitignore  API.md  Cargo.toml  README.md  biome.json
.github/workflows/: ci.yml  release.yml
app/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
app/frontend/src/: App.module.css  App.tsx  main.tsx
app/frontend/src/plugins/: ParticleCloudDisplay.ts  ParticleCloudPlugin.ts
app/server/: Cargo.toml  build.rs
app/server/src/: main.rs
lib/frontend/: package-lock.json  package.json
lib/frontend/src/: env.d.ts
lib/frontend/src/api/: client.ts
lib/frontend/src/app/: App.tsx
lib/frontend/src/decoder/: FrameParser.ts  RosDecoder.ts
lib/frontend/src/panels/: PanelProps.ts  PanelRegistry.ts
lib/frontend/src/playback/: MessageBuffer.ts
lib/frontend/src/plugins/: DisplayPlugin.ts  PluginRegistry.ts
lib/frontend/src/state/: MultiBagState.ts
lib/frontend/src/three/: AxesDisplay.ts  GridDisplay.ts  LaserScanDisplay.ts  MarkerArrayDisplay.ts  OccupancyGridDisplay.ts  OdometryDisplay.ts  PathDisplay.ts  PolygonDisplay.ts  PoseArrayDisplay.ts  PoseDisplay.ts  SceneSetup.ts  TFDisplay.ts  TFTree.ts
lib/frontend/src/ui/: CollapsibleSection.module.css  CollapsibleSection.tsx  DropOverlay.module.css  DropOverlay.tsx  FolderBrowser.module.css  FolderBrowser.tsx  JsonNode.module.css  JsonNode.tsx  ProfileSelector.module.css  ProfileSelector.tsx  Sidebar.module.css  Sidebar.tsx  TopicTimeline.tsx
lib/server/: Cargo.toml
lib/server/src/: api.rs  app.rs  bag_service.rs  frame.rs  lib.rs  msg_parser.rs  schema.rs
(+21 files in other folders)
