[package]
name = "rosbag-viewer"
version = "0.1.0"
edition = "2021"

[lib]
name = "rosbag_viewer"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rosbag = "0.6"
lru = "0.12"
tower-http = { version = "0.6", features = ["cors"] }
log = "0.4"
chrono = { version = "0.4.44", default-features = false, features = ["std"] }

[lints]
workspace = true
